# databricks-mlops-blueprint

./: .gitignore  DOCUMENTATION.md  README.md  databricks.yml  init_project.py  pyproject.toml
conf/: project.yml
notebooks/: 00_eda_template.py  scratchpad.py  test.py
resources/: batch_inference_job.yml  blueprint_workflow.yml  feature_engineering_job.yml  model_training_job.yml
src/: _version.py
src/batch_inference/: main.py  score.py
src/config/: config.py
src/deployment/: main.py  promote.py
src/feature_engineering/: compute_features.py  main.py
src/mlops_blueprint/batch_inference/: main.py  score.py
src/mlops_blueprint/config/: config.py
src/mlops_blueprint/deployment/: main.py
src/mlops_blueprint/feature_engineering/: compute_features.py  main.py
src/mlops_blueprint/training/: main.py
src/mlops_blueprint/validation/: main.py
src/training/: main.py  train.py
src/validation/: evaluate.py  main.py
tests/: test_config.py  test_imports.py
