[project]
name = "mlops-blueprint"
description = "A standard MLOps Blueprint based on Python Wheels, Pydantic configs, and Databricks Asset Bundles."
requires-python = ">=3.12, <3.13"
dependencies = [
    "pydantic>=2.0.0",
    "mlflow>=2.11.3",
    "scikit-learn>=1.1.1",
    "pandas>=1.5.3",
    "pyyaml>=6.0.1",
    "typer>=0.12.0"
]
dynamic = ["version"]

[project.scripts]
# Clear CLI entry points for Databricks to execute as Python tasks
extract-features = "feature_engineering.main:app"
train-model = "training.main:app"
validate-model = "validation.main:app"
deploy-model = "deployment.main:app"
run-inference = "batch_inference.main:app"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
local-dev = [
    "databricks-connect==17.3",
    "pip>=26.0.1",
    "pytest>=9.0.2",
]

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.pytest.ini_options]
pythonpath = "src"
